# 1.00.19 (50427) Apr 7, 2011
Hid the velocity vector for fixed bodies such as the sun in cartoon mode
# 1.00.18 (50425) Apr 7, 2011
Fixed: sun can't be moved by the user in cartoon modes
# 1.00.17 (50423) Apr 7, 2011
Renamed "sun" to "star"
Hold the position of the sun fixed
# 1.00.16 (50041) Mar 21, 2011
Made it so that vector arrowheads shrink as the vector shrinks
Made it so that vectors are always shown at a minimum size of 10 pixels (even if they would be too small to see)
Artificially scale up the time readout so that Sun/Earth/Moon mode has a stable orbit with correct periods
Tuned cartoon initial conditions so that there are 12 cartoon lunar orbits in one cartoon earth orbit
# 1.00.15 (50035) Mar 21, 2011
> 3/21/2011 Added improved measuring tape image and converted gravity-and-orbits to use it, see #2785
> Fixed: return object should account for the camera zoom
> Fixed: make the cartoon Earth/Moon force vector a bit smaller (1/2 grid cell)
> Brightened measuring tape color to make it easier to see
> Paused the sim after "return object" is pressed
# 1.00.14 (50024) Mar 21, 2011
> Changed the force scales in "cartoon" mode so that the initial force vector takes up 1/2 a grid cell
# 1.00.13 (50022) Mar 21, 2011
> Removed "Mass" checkbox from the Cartoon tab
# 1.00.12 (50018) Mar 21, 2011
> Fixed the gravity force scale for cartoon's first mode
# 1.00.11 (50016) Mar 21, 2011
> Renamed "intro" to "cartoon"
> Increased Earth mass in cartoon mode so the sun moves the same as it does in the second mode
# 1.00.10 (49888) Mar 16, 2011
> Start measuring tape in a less intuitive place, to see if that prompts students to move it
> Reworded "Restart" to "Reset"
# 1.00.09 (49854) Mar 16, 2011
> Only show the "return object" button if the object goes 12% outside of the bounds so the button doesn't flash on and off so often
Removed unused Scale strategy
Internal fixes: documentation, property refactoring, minor refactors