@@ -1,3 +1,4 @@
+Switched sim speed slider to use SimSpeedControlPNode, which has improved support for i18n
 # 1.00.19 (50427) Apr 7, 2011
 Hid the velocity vector for fixed bodies such as the sun in cartoon mode
 # 1.00.18 (50425) Apr 7, 2011
